--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 	<title>Merge and Branch</title>
-	<link rel="stylesheet" type="text/css" href="jquery-ui.css">
+		<link rel="stylesheet" type="text/css" href="jquery-ui.css">
+		<link rel="stylesheet" type="text/css" href="styles.css">
 		<script type="text/javascript" src='https://code.jquery.com/jquery-1.9.1.js'></script>
 		<script type="text/javascript" src='https://code.jquery.com/ui/1.10.3/jquery-ui.js'></script>
 		<!-- Latest compiled and minified CSS -->
@@ -18,10 +19,10 @@
 		<p>
 			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis eleifend mi arcu, ac tincidunt sapien dignissim sit amet. Suspendisse euismod ipsum et metus commodo, vitae blandit diam lobortis. Sed ac eros dolor. Ut quis imperdiet nunc, consectetur pellentesque leo. Nullam lorem est, finibus eget volutpat id, fringilla id ipsum. Nullam vitae odio at neque ultrices condimentum. Maecenas feugiat quam vel mauris bibendum, ac semper lacus sollicitudin. Cras vulputate dapibus augue. Vestibulum sed nulla mattis urna sagittis pellentesque sed in purus. Morbi ultricies felis ipsum, bibendum gravida ipsum scelerisque ac. Suspendisse et felis mollis, congue justo non, semper metus. Vivamus in neque quis augue fringilla congue. Maecenas eu nibh dolor. Donec tempus velit vel velit egestas ullamcorper.
 		</p>
-		<div id="dog_pic"><img src="headphone.jpg"></div>
-		<div id="dog_pic"><img src="corgi.jpg"></div>
-		<div id="dog_pic"><img src="dog.jpg"></div>
-		<div id="dog_pic"><img src="puppy.jpg"></div>
+		<div class="dog_pic"><img src="weinerdog.jpeg"></div>
+		<div class="dog_pic"><img src="corgi.jpg"></div>
+		<div class="dog_pic"><img src="dog.jpg"></div>
+		<div class="dog_pic"><img src="puppy.jpg"></div>
 	</div>
 
 </body>
